--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <img src = "https://s3.amazonaws.com/learn-verified/columbia-logo.png">
+        <img src = "images/columbia-logo.png" alt="Columbia">
 
         <span>COLUMBIARECORDS.COM</span>
-
+        
+        <br>
        
 
-        <img src = "https://s3.amazonaws.com/learn-verified/sony-logo.png">
+        <img src = "images/sony-logo.png" alt="Sony">
 
       </div>
     </div>
